<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/primary"
    tools:context=".views.activity.EditProfileActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/editImgProfile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/img_broken"
        android:layout_gravity="center"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_name"
        app:hintTextColor="@color/white"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="25dp">

        <EditText
            android:id="@+id/nameEditProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:fontFamily="@font/rubik_regular"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/phone_optional"
    app:hintTextColor="@color/white"
    android:layout_marginTop="10dp"
    android:layout_marginHorizontal="25dp">

    <EditText
        android:id="@+id/phoneEditProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:fontFamily="@font/rubik_regular"
        />
</com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/age_optional"
        app:hintTextColor="@color/white"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="25dp">

        <EditText
            android:id="@+id/ageEditProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:fontFamily="@font/rubik_regular"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnEditProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Simpan"
        android:textColor="@color/white"
        style="@style/Widget.Material3.Button.TonalButton"
        android:backgroundTint="@color/secondary"
        android:layout_gravity="end"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="25dp"
        />
</LinearLayout>