<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".views.activity.EditDataActivity">

    <ImageView
        android:id="@+id/imgHeading"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@color/primary"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Edit Data"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:fontFamily="@font/sugo_regular"
        android:textAlignment="center"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:layout_marginHorizontal="25dp"
        app:layout_constraintBottom_toBottomOf="@+id/imgHeading"
        app:layout_constraintTop_toBottomOf="@+id/imgHeading">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:orientation="vertical">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_name"
        app:helperTextTextColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="25dp">

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:fontFamily="@font/rubik_regular"
            />
    </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/checkbox_name"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="25dp"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="Jangan Gunakan Nama ini"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_value"
        app:helperTextTextColor="@color/black"
        android:layout_marginHorizontal="25dp">

        <EditText
            android:id="@+id/edit_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:fontFamily="@font/rubik_regular"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_rate"
        app:helperTextTextColor="@color/black"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="25dp">

        <EditText
            android:id="@+id/edit_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:fontFamily="@font/rubik_regular"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_split"
        app:helperTextTextColor="@color/black"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="25dp">

        <EditText
            android:id="@+id/edit_split"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_percent_24"
            android:textColor="@color/black"
            android:fontFamily="@font/rubik_regular"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginStart="25dp"
            android:id="@+id/total_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Result"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:fontFamily="@font/rubik_regular"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/result"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/result"
            />

        <Button
            android:id="@+id/result"
            android:layout_marginEnd="10dp"
            android:text="="
            android:backgroundTint="@color/secondary"
            android:textColor="@color/white"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/total_value"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btn_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Submit"
        android:textColor="@color/white"
        android:fontFamily="@font/rubik_regular"
        android:backgroundTint="@color/secondary"
        style="@style/Widget.Material3.Button.TonalButton"
        android:layout_gravity="end"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="25dp"/>

    </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>